cli/tests/snapshots/help__help_subvolume_get_default.snap
---
source: cli/tests/help.rs
expression: "help(&[\"subvolume\", \"get-default\"])"
---
Show the default subvolume of a filesystem

Usage: get-default <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
  -h, --help
          Print help
