cli/tests/snapshots/help__help_subvolume_set_flags.snap
---
source: cli/tests/help.rs
expression: "help(&[\"subvolume\", \"set-flags\"])"
---
Set the flags of a subvolume

Usage: set-flags <FLAGS> <PATH>

Arguments:
  <FLAGS>
          Flags to set ("readonly" or "-" to clear)

  <PATH>
          Path to a subvolume

Options:
  -h, --help
          Print help
