cli/tests/snapshots/help__help_subvolume_show.snap
---
source: cli/tests/help.rs
expression: "help(&[\"subvolume\", \"show\"])"
---
Show detailed information about a subvolume

Displays UUIDs, generation numbers, creation time, flags, and send/receive transaction IDs for the
subvolume that contains the given path.

The subvolume can be specified by path (default), or by root id or UUID that are looked up relative
to the given path.

Usage: show [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a subvolume or any file within it

Options:
  -r, --rootid <ID>
          Look up subvolume by its root ID instead of path

  -u, --uuid <UUID>
          Look up subvolume by its UUID instead of path

  -h, --help
          Print help (see a summary with '-h')
